Adjusted the docker file

--- a/angular.json
+++ b/angular.json
@@ -59,7 +59,9 @@
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kb",
                   "maximumError": "4kb"
-                }
+                },
+                { "type": "initial", "maximumWarning": "2mb", "maximumError": "5mb" },
+                { "type": "anyComponentStyle", "maximumWarning": "16kb", "maximumError": "24kb" }
               ]
             },
             "development": {
